apps/nodejs-backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodejs-backend
  labels:
    name: nodejs-backend
    app-type: backend
    framework: nodejs
