apps/nodejs-backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nodejs-backend-route
  namespace: nodejs-backend
  labels:
    app: nodejs-backend
spec:
  host: nodejs.apps.p-ai.net
  to:
    kind: Service
    name: nodejs-backend-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
